cleanup, add hero image

--- a/docs/document-verification/driving-license.tag.mdx
+++ b/docs/document-verification/driving-license.tag.mdx
@@ -43,6 +43,12 @@ The Driving License Verification API is a digital solution that allows businesse
 - **Authentication**: JWT Token based authentication
 - **Response Format**: JSON with digital signature verification
 
+## Download OpenAPI Specification
+
+<a href="/specs/document-verification-dl-v1.0.yaml" download className="button button--primary button--lg">
+  📥 Download OpenAPI Spec (YAML)
+</a>
+
 ## Available Endpoints
 
 ```mdx-code-block
