--- a/docs/farm-yield-multiland/farm-yield-multi-land-parcel.tag.mdx
+++ b/docs/farm-yield-multiland/farm-yield-multi-land-parcel.tag.mdx
@@ -114,6 +114,14 @@ This service is part of the Unified Lending Interface (ULI) and is powered by Sa
 - **Farm Imagery**: Satellite images and geometry visualization
 - **Centroid Mapping**: Precise geographic coordinates for each parcel
 
+
+
+## Download OpenAPI Specification
+
+<a href="/specs/farm-yield-multiland-v1.7.yaml" download className="button button--primary button--lg">
+  📥 Download OpenAPI Spec (YAML)
+</a>
+
 ## Available Endpoints
 
 ```mdx-code-block
