--- a/docs/lrs-lien-marking/lrs-lien-marking.tag.mdx
+++ b/docs/lrs-lien-marking/lrs-lien-marking.tag.mdx
@@ -86,6 +86,14 @@ This service is part of the Unified Lending Interface (ULI) and enables financia
 - **Rajasthan**: Requires district, tehsil, village IDs with khasra numbers
 - **Chhattisgarh**: Uses village code and survey number combinations
 
+
+
+## Download OpenAPI Specification
+
+<a href="/specs/lrs-lien-marking-v1.5.yaml" download className="button button--primary button--lg">
+  📥 Download OpenAPI Spec (YAML)
+</a>
+
 ## Available Endpoints
 
 ```mdx-code-block
