--- a/docs/lrs-owner-details/lrs-owner-details.tag.mdx
+++ b/docs/lrs-owner-details/lrs-owner-details.tag.mdx
@@ -73,6 +73,14 @@ Each state has unique parameter requirements:
 - **Uttar Pradesh**: Uses ULPIN (Unique Code) for land parcel identification
 - **Tamil Nadu**: Uses LGD codes for district, taluk, and village identification
 
+
+
+## Download OpenAPI Specification
+
+<a href="/specs/lrs-owner-details-v1.5.yaml" download className="button button--primary button--lg">
+  📥 Download OpenAPI Spec (YAML)
+</a>
+
 ## Available Endpoints
 
 ```mdx-code-block
