--- a/docs/pan-verification/pan-verification.tag.mdx
+++ b/docs/pan-verification/pan-verification.tag.mdx
@@ -57,6 +57,14 @@ The PAN Verification API service allows verification of the details and validity
 
 ⚠️ **Important**: For production deployment, a PFX certificate from a CA (such as eMudhra) is mandatory. The certificate must be shared with Protean for mapping and uploaded by RBIH.
 
+
+
+## Download OpenAPI Specification
+
+<a href="/specs/pan-verification-v1.3.yaml" download className="button button--primary button--lg">
+  📥 Download OpenAPI Spec (YAML)
+</a>
+
 ## Available Endpoints
 
 ```mdx-code-block
