--- a/docs/translation-transliteration/translation-transliteration.tag.mdx
+++ b/docs/translation-transliteration/translation-transliteration.tag.mdx
@@ -90,6 +90,14 @@ This service is part of the Public Tech Platform for Frictionless Credit and ena
 - **User Interface**: Support multilingual banking interfaces
 - **Document Processing**: Convert and verify multilingual documents
 
+
+
+## Download OpenAPI Specification
+
+<a href="/specs/translation-transliteration-v1.3.yaml" download className="button button--primary button--lg">
+  📥 Download OpenAPI Spec (YAML)
+</a>
+
 ## Available Endpoints
 
 ```mdx-code-block
