--- a/docs/voter-verification/voter-verification.tag.mdx
+++ b/docs/voter-verification/voter-verification.tag.mdx
@@ -52,6 +52,14 @@ The Voter ID API is a digital solution that allows businesses to verify an indiv
 - **Environment Support**: Sandbox and Production
 - **Authentication**: JWT Token (6 hours sandbox, 12 hours production)
 
+
+
+## Download OpenAPI Specification
+
+<a href="/specs/voter-verification-v1.0.yaml" download className="button button--primary button--lg">
+  📥 Download OpenAPI Spec (YAML)
+</a>
+
 ## Available Endpoints
 
 ```mdx-code-block
