--- a/docs/aadhaar-redact/aadhaar-redact.tag.mdx
+++ b/docs/aadhaar-redact/aadhaar-redact.tag.mdx
@@ -42,6 +42,14 @@ The Aadhaar Redact API allows Lenders to securely mask Aadhaar numbers in docume
 - **Environment Support**: Sandbox and Production
 - **Authentication**: JWT Token with 6-hour validity
 
+
+
+## Download OpenAPI Specification
+
+<a href="/specs/aadhaar-redact-v1.0.yaml" download className="button button--primary button--lg">
+  📥 Download OpenAPI Spec (YAML)
+</a>
+
 ## Available Endpoints
 
 ```mdx-code-block
