--- a/docs/account-aggregator/account-aggregator.tag.mdx
+++ b/docs/account-aggregator/account-aggregator.tag.mdx
@@ -71,6 +71,14 @@ The Account Aggregator API service allows to get consent of the application and 
 - **Multi-Provider Consent**: Aggregated financial data from multiple sources
 - **Custom Consent**: Various other financial information types
 
+
+
+## Download OpenAPI Specification
+
+<a href="/specs/account-aggregator-v1.3.yaml" download className="button button--primary button--lg">
+  📥 Download OpenAPI Spec (YAML)
+</a>
+
 ## Available Endpoints
 
 ```mdx-code-block
