--- a/docs/bank-account-verification/bank-account-verification.tag.mdx
+++ b/docs/bank-account-verification/bank-account-verification.tag.mdx
@@ -59,6 +59,14 @@ Digio's Bank Account Verification service enables financial institutions to secu
 - **PENNY_LESS**: Account verification without initiating any transaction
 - **AUTO**: Automatically selects the best available verification method
 
+
+
+## Download OpenAPI Specification
+
+<a href="/specs/bank-account-verification-v1.0.yaml" download className="button button--primary button--lg">
+  📥 Download OpenAPI Spec (YAML)
+</a>
+
 ## Available Endpoints
 
 ```mdx-code-block
