--- a/docs/facematch/facematch.tag.mdx
+++ b/docs/facematch/facematch.tag.mdx
@@ -52,6 +52,14 @@ The Facematch API enables Lenders to verify a customer's identity by comparing a
 - **Environment Support**: Sandbox and Production
 - **Authentication**: JWT Token with 6-hour validity
 
+
+
+## Download OpenAPI Specification
+
+<a href="/specs/facematch-v1.0.yaml" download className="button button--primary button--lg">
+  📥 Download OpenAPI Spec (YAML)
+</a>
+
 ## Available Endpoints
 
 ```mdx-code-block
