--- a/docs/gstn-service/gstn-service.tag.mdx
+++ b/docs/gstn-service/gstn-service.tag.mdx
@@ -66,6 +66,14 @@ The APIs defined here are implemented by the GSTN to enable lenders to discover 
 - Store linkRefNumber and customerAddress from verify API for future use
 - If customerAddress or linkRefNumber are lost, restart the entire process
 
+
+
+## Download OpenAPI Specification
+
+<a href="/specs/gstn-service-v1.0.yaml" download className="button button--primary button--lg">
+  📥 Download OpenAPI Spec (YAML)
+</a>
+
 ## Available Endpoints
 
 ```mdx-code-block
