--- a/docs/identity-verification/identity-verification.tag.mdx
+++ b/docs/identity-verification/identity-verification.tag.mdx
@@ -54,6 +54,14 @@ These APIs provide a comprehensive suite of solutions that support every stage o
 - **Response Format**: JSON with digital signature verification
 - **Security**: HMAC SHA-256 for data integrity
 
+
+
+## Download OpenAPI Specification
+
+<a href="/specs/identity-verification-v1.1.yaml" download className="button button--primary button--lg">
+  📥 Download OpenAPI Spec (YAML)
+</a>
+
 ## Available Endpoints
 
 ```mdx-code-block
