--- a/docs/legal-verification/legal-verification.tag.mdx
+++ b/docs/legal-verification/legal-verification.tag.mdx
@@ -101,6 +101,14 @@ This service is part of the Unified Lending Interface (ULI) and enables financia
 - **Reference Tracking**: Unique reference IDs for request tracking
 - **Async Processing**: Efficient handling of large-scale background checks
 
+
+
+## Download OpenAPI Specification
+
+<a href="/specs/legal-verification-v1.1.yaml" download className="button button--primary button--lg">
+  📥 Download OpenAPI Spec (YAML)
+</a>
+
 ## Available Endpoints
 
 ```mdx-code-block
